# EvolutionAlgorithms

./: CMakeLists.txt  main.cpp
src/: BasicEvolutions.cpp  Basis.cpp  Basis.h  CMakeLists.txt  Consts.h  CustomFunctions.cpp  CustomFunctions.h  Evolution.cpp  Evolution.h  Operations.cpp  Operations.h  WeightRandGenerator.cpp  WeightRandGenerator.h  sugar.cmake
src/BasicEvolutions/: Basis.h  Consts.h  CustomFunctions.cpp  CustomFunctions.h  CustomFunctions.tpp  Evolution.cpp  Evolution.h  Evolution.tpp  Operations.cpp  Operations.h  Operations.tpp  WeightRandGenerator.cpp  WeightRandGenerator.h  WeightRandGenerator.tpp  sugar.cmake
